--- a/vanillajs/style/index.css
+++ b/vanillajs/style/index.css
@@ -103,8 +103,6 @@ h1 {
 
 .decoration img {
     filter: brightness(0%);
-    max-width: 483px;
-    width: 100%;
     position: relative;
 }
 
@@ -117,9 +115,8 @@ h1 {
 .right,
 .left {
     display: block;
-    width: 100%;
-    height: 100%;
-    max-width: 483px;
+    width: 482px;
+    height: 482px;
     background-size: 100%;
     position: absolute;
     bottom: 0;
