--- a/gulp/src/css/app/variables.scss
+++ b/gulp/src/css/app/variables.scss
@@ -2,22 +2,22 @@
 // ---ColorScheme---
 
 // основной цвет:
-$color_1_1: #F9F4ED;
-$color_1_2: #BBB8B4;
-$color_1_3: #A27F4D;
-$color_1_4: #FCF8F3;
-$color_1_5: #FCF9F5;
+$color_1_1: #FFD9D9;
+$color_1_2: #8A7F7F;
+$color_1_3: #5C0707;
+$color_1_4: #FFE7E7;
+$color_1_5: #FFF2F2;
 
 // вторичный цвет А:
-$color_2_1: #A7A7AE;
-$color_2_2: #7E7E82;
-$color_2_3: #383671;
-$color_2_4: #D0D0D6;
-$color_2_5: #D2D2D6;
+$color_2_1: #A7C5C5;
+$color_2_2: #626B6B;
+$color_2_3: #054747;
+$color_2_4: #D9F0F0;
+$color_2_5: #E4F0F0;
 
 // вторичный цвет B:
-$color_3_1: #A0A8A5;
-$color_3_2: #7A7E7C;
-$color_3_3: #346D58;
-$color_3_4: #CCD4D1;
-$color_3_5: #CED4D1;
+$color_3_1: #E9F5D1;
+$color_3_2: #82857A;
+$color_3_3: #3D5806;
+$color_3_4: #F5FCE5;
+$color_3_5: #F8FCF0;
