--- a/gulp_typescript/src/css/app/sentences.scss
+++ b/gulp_typescript/src/css/app/sentences.scss
@@ -1,5 +1,9 @@
 @import './variables.scss';
 
+.hidden-sentences-popup-menu {
+    top: 30px;
+}
+
 .sentences-pictures-closed {
     background-color: $color_3_1;
 
