--- a/gulp_typescript/src/css/style.scss
+++ b/gulp_typescript/src/css/style.scss
@@ -33,6 +33,8 @@ body {
         font-size: 24pt;
         text-transform: uppercase;
         cursor: pointer;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     #topbar {
